[gd_scene load_steps=15 format=3 uid="uid://cdoq6xtniibw8"]

[ext_resource type="Script" path="res://scenes/gui/HeroTextEdit.gd" id="1_8xywo"]
[ext_resource type="Texture2D" uid="uid://ddoejeqbnxshx" path="res://assets/left column.png" id="1_pvayr"]
[ext_resource type="Texture2D" uid="uid://drk7drh2kiggy" path="res://assets/right column.png" id="2_4wsxe"]
[ext_resource type="Texture2D" uid="uid://ex077uocw0ga" path="res://scenes/gui/record_button.png" id="2_wjl6o"]
[ext_resource type="Texture2D" uid="uid://b78i6sttf11m" path="res://assets/marble bottom.png" id="3_aja86"]
[ext_resource type="Script" path="res://scenes/gui/RecordVoiceButton.gd" id="3_ll062"]
[ext_resource type="Texture2D" uid="uid://ij8bb65jyhcp" path="res://assets/text input.png" id="4_l36ue"]
[ext_resource type="Script" path="res://scenes/gui/AudioInput.gd" id="6_o6bsm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0ddl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgh6u"]
bg_color = Color(0.6, 0.6, 0.6, 0)
skew = Vector2(100, 100)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3alo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_embtt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qyap"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_o7xl2"]

[node name="gui" type="Node2D"]

[node name="BackgroundColorLeft" type="ColorRect" parent="."]
offset_right = 168.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="ColumnLeft" type="Sprite2D" parent="BackgroundColorLeft"]
position = Vector2(95, 408)
texture = ExtResource("1_pvayr")

[node name="BackgroundColorRight" type="ColorRect" parent="."]
offset_left = 1752.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="ColumnRight" type="Sprite2D" parent="BackgroundColorRight"]
position = Vector2(72, 408)
texture = ExtResource("2_4wsxe")

[node name="GameMasterBackground" type="Sprite2D" parent="."]
position = Vector2(960, 947)
texture = ExtResource("3_aja86")

[node name="GameMasterOutput" type="Label" parent="GameMasterBackground"]
z_index = 1
offset_left = -864.0
offset_top = 72.0
offset_right = 1056.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 24
autowrap_mode = 3

[node name="HeroTextBorder" type="Sprite2D" parent="."]
position = Vector2(864, 880)
texture = ExtResource("4_l36ue")

[node name="HeroTextEdit" type="TextEdit" parent="."]
z_index = 1
offset_left = 24.0
offset_top = 824.0
offset_right = 1704.0
offset_bottom = 936.0
theme_override_font_sizes/font_size = 26
placeholder_text = "Que faire ? "
script = ExtResource("1_8xywo")

[node name="RecordVoiceButton" type="Button" parent="."]
z_index = 1
offset_left = 1760.0
offset_top = 824.0
offset_right = 1889.0
offset_bottom = 952.0
theme_override_styles/normal = SubResource("StyleBoxFlat_v0ddl")
theme_override_styles/hover = SubResource("StyleBoxFlat_lgh6u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i3alo")
theme_override_styles/disabled = SubResource("StyleBoxFlat_embtt")
theme_override_styles/focus = SubResource("StyleBoxFlat_3qyap")
icon = ExtResource("2_wjl6o")
expand_icon = true
script = ExtResource("3_ll062")

[node name="AudioInput" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_o7xl2")
autoplay = true
bus = &"Record"
script = ExtResource("6_o6bsm")

[connection signal="audio_recording_started" from="RecordVoiceButton" to="AudioInput" method="_on_record_voice_button_audio_recording_started"]
[connection signal="audio_recording_stopped" from="RecordVoiceButton" to="AudioInput" method="_on_record_voice_button_audio_recording_stopped"]
[connection signal="mouse_entered" from="RecordVoiceButton" to="RecordVoiceButton" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="RecordVoiceButton" to="RecordVoiceButton" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="RecordVoiceButton" to="RecordVoiceButton" method="_on_Button_pressed"]
